fix: margin collpase on Safari.

--- a/src/App.css
+++ b/src/App.css
@@ -14,19 +14,21 @@ button {
 }
 
 body {
-	transition-duration: 10s;
-	background-color: #4D9BF9;
+	margin: 0;
+	min-height: 100vh;
 }
 
 h1 {
 	color: rgba(255,255,255, 0.9);
 	font-size: 3rem;
+	margin: 0;
 	font-family: 'Space Grotesk';
 }
 p {
 	font-family: 'Space Grotesk';
 	color: rgba(255,255,255, 0.8);
 	font-size: 1rem;
+	margin: 0;
 }
 
 a {
